ajout de la partie activités pour la version tablette, ajout de la class activites-little-pics dans html, correction orthographe class activities-XL

--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ img.popular-image {
 /*activities*/
 
 #activites {
-    margin-top: 3.04rem;
+    margin-top: 35px;
     margin-left: 1.3rem;
     font-size: 1.4rem;
     color: black;
@@ -448,6 +448,7 @@ img.popular-image {
 }
 
 .footer-titles {
+    /*padding-top: 20px;*/
     margin-bottom: 0;
 }
 
@@ -534,6 +535,10 @@ footer li {
         border-radius: unset;
     }
 
+    .popular-image {
+        border: 5px solid #fff;
+    }
+
     .popular-overlay {
         background-color: #fff;
         margin-left: 15px;
@@ -576,7 +581,7 @@ footer li {
         justify-content: center;
         flex-direction: unset;
         align-items: flex-start;
-        width: 90%;
+        width: 95%;
         margin: 12px 20px;
     }
 
@@ -616,6 +621,62 @@ footer li {
 
     .accomodations-image {
         height: 125px;
+    }
+
+    /* activities */
+
+    #activities {
+        margin-top: 20px;
+        /*height: 475px;*/
+    }
+
+    .activities {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 840px;
+        align-items: center;
+    }
+
+    #activites {
+        align-self: flex-start;
+    }
+
+    .activities-places {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .activities-second,
+    .activities-first {
+        display: flex;
+        width: auto;
+        height: 300px;
+        margin-bottom: 45px;
+    }
+
+    .activities-XL {
+        width: 100%;
+        height: auto;
+    }
+
+    .activities-places a {
+        height: 100%;
+        width: auto;
+    }
+
+    .activities-doubleXL {
+        height: 100%;
+        width: 100%;
+    }
+
+    .activities-litle-pics {
+        width: 100%;
+        height: 50%;
+    }
+
+    .activities-litle-pics img {
+        height: 70%;
     }
 
     /*media footer*/
@@ -664,7 +725,7 @@ footer li {
         height: 8.31em;
         display: flex;
         /*justify-content: flex-start;*/
-        border: #fff 0.3125em solid;
+
         border-radius: 1.5625em;
     }
 
@@ -682,5 +743,9 @@ footer li {
         padding: 0 1.25rem;
         margin-left: 0;
         text-align: left;
+    }
+
+    .activities-places {
+        flex-direction: row;
     }
 }
